# axum-template

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build-api.yml  general.yml
configuration/: base.yml
src/: auth.rs  config.rs  errors.rs  lib.rs  main.rs  redis.rs  response.rs  startup.rs
src/dto/: auth.rs
src/routes/: hello.rs
