[package]
name = "axum-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = { version = "0.6", features = ["headers", "multipart"] }
axum-macros = "0.3.2"
base64 = "0.21.0"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
clap = { version = "4.1.4", features = ["derive", "env"] }
config = "0.13"
csv = "1.2.0"
deadpool-redis = "0.11"
derive_more = "0.99"
directories = "4"
dotenvy = { version = "0.15.6", features = ["clap"] }
hyper = { version = "0.14", features = ["full"] }
jsonwebtoken = "8"
oauth2 = "4"
reqwest = { version = "0.11", features = ["json"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "offline"] }
thiserror = "1"
tokio = { version = "1.23", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["cors", "tracing", "trace"] }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "registry"] }
uuid = { version = "1", features = [
    "serde",
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
validator = { version = "0.16", features = ["derive"] }
